# clima-palomar-bot

./: Dockerfile  README.md  bot.py  imghdr.py  main.py  pyproject.toml  render.yaml  requirements.txt
tests/: test_river.py
