[project]
name = "climapalomarbot"
version = "0.1.0"
description = "Bot de clima y noticias"
authors = ["Daniel Ontivero <daniel@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
requires-python = ">=3.11, <3.13"
flask = "^3.1.1"
requests = "^2.32.4"
python-telegram-bot = "13.15"
pytz = "*"
apscheduler = "3.10.4"
nest-asyncio = "*"
feedparser = "*"
